Revision history for Web::Components::Role::TT

          - Adding badges to documentation

0.4.1     2015-09-04 19:03:10
          - Fixed exception throwing right class
          - Dropped dependency on Class::Usul

0.3.1     2015-09-03 10:08:04
          - Removed pre hook bad API design
          - Improved naming for pre hook method

0.2.1     2015-09-02 15:21:52
          - Imported code, wrote POD, and added tests

0.1.1     2015-09-02 13:38:39
          - Added project files to master branch
